# DailyMath

./: .gitignore  LICENSE  README.md
api/: docker-compose.yaml  init.sql  pom.xml
back-end/: .env-example  docker-compose.yaml  init.sql  pom.xml  pyproject.toml  requirements.txt
back-end/src/: config.py  main.py
back-end/src/controllers/: Connection.py  RequestExercise.py  exercise.py  request_exercise.py
back-end/src/main/java/com/math/dailymath/: DailyServlet.java  DailySolutionServlet.java  SolutionServlet.java
back-end/src/main/java/com/math/dailymath/dao/: DailyExercise.java
back-end/src/main/java/com/math/dailymath/errors/: ExerciseException.java
back-end/src/main/java/com/math/dailymath/models/: DailySolution.java  Database.java  Exercise.java  MultipleChoice.java  Solution.java
back-end/src/main/java/com/math/dailymath/services/: ExerciseService.java  MultipleChoiceService.java  ServiceExercise.java  SolutionService.java
back-end/src/main/java/com/math/dailymath/utils/: Utils.java
back-end/src/main/webapp/: index.html
back-end/src/models/: exercise.py
back-end/src/test/java/com/math/dailymath/dao/: DailyExerciseTest.java
back-end/src/utils/: errors.py  gen_db.py
front-end/: index.js
front-end/views/pages/: index.ejs
webapp/: .env-example  index.js  package-lock.json  package.json  utils.js
webapp/public/css/: index.css
webapp/public/js/: admin.js  index.js  login.js
webapp/views/pages/: admin.ejs  index.ejs  login.ejs  solution.ejs
webapp/views/partials/: footer.ejs  head.ejs
(+17 files in other folders)
