[tool.poetry]
name = "src"
version = "0.1.0"
description = "um site que vai apresentar um problema matemático por dia, podendo ser este de matemática pura ou aplicada"
authors = ["Bruna Ferreira <bferreira.slv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:start"
